[feat] implement JdbcPhoneDao + integration testing of JdbcPhoneDao